# mes-build-system

./: .gitignore  .gitmodules  Makefile  README.md  asset_packer.py  update_colormap.py
.vmes/: CMakeLists.txt
src/: main.c
vmes/: CMakeLists.txt
